// Copyright Â© 2020 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package getamis.alice.crypto.tss.ecdsa.gg18.addshare;

option go_package = "github.com/getamis/alice/crypto/tss/ecdsa/gg18/addshare";

import "github.com/getamis/alice/crypto/birkhoffinterpolation/bk.proto";
import "github.com/getamis/alice/crypto/ecpointgrouplaw/point.proto";
import "github.com/getamis/alice/crypto/zkproof/message.proto";

enum Type {
    OldPeer = 0;
    NewBk   = 1;
    Compute = 2;
    Result  = 3;
    Verify  = 4;
}

message Message {
    Type type = 1;
    string id = 2;
    oneof body {
        BodyOldPeer old_peer = 3;
        BodyNewBk   new_bk   = 4;
        BodyCompute compute  = 5;
        BodyResult  result   = 6;
        BodyVerify  verify   = 7;
    }
}

message BodyOldPeer {
    birkhoffinterpolation.BkParameterMessage bk = 1;
    zkproof.SchnorrProofMessage siGProofMsg = 2;
    ecpointgrouplaw.EcPointMessage pubkey = 3;
    uint32 threshold = 4;
}

message BodyNewBk {
    birkhoffinterpolation.BkParameterMessage bk = 1;
}

message BodyCompute {
    bytes delta = 1;
    zkproof.SchnorrProofMessage siGProofMsg = 2;
}

message BodyResult {
    bytes delta = 1;
}

message BodyVerify {
    zkproof.SchnorrProofMessage siGProofMsg = 1;
}
